--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,17 @@ version: '2'
     
 services:
     
+  hello-world-app:
+    build: 
+      context: .
+      dockerfile: ./hello-world-app/Dockerfile
+    ports:
+      - "3333:9999"
+    environment:
+      - HANA_UID=${HANA_UID}
+      - HANA_PWD=${HXE_MASTER_PASSWORD}
+      - HANA_SERVERNODE=${HANA_SERVER} 
+
   sqlpad:
     image: sqlpad/sqlpad
     volumes:
