--- a/hello-world-app/backend/package.json
+++ b/hello-world-app/backend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "express": "^4.17.0"
+    "csv-parser": "^2.3.0",
+    "express": "^4.17.0",
+    "formidable": "^1.2.1"
   }
 }
