--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,13 +9,13 @@ services:
     volumes:
       - shared:/shared-files
     ports:
-      - "3333:9999" # No longer needed we are using Nginx
       # Reroute Nginx listening on Port 80 over to 8080 which we've already exposed in EC2
       - "8080:80"
     environment:
       - HANA_UID=${HANA_APP_UID}
       - HANA_PWD=${HANA_APP_PWD}
       - HANA_SERVERNODE=${HANA_SERVER}
+      - UPLOAD_DIR=${UPLOAD_DIR}
 
   sqlpad:
     image: sqlpad/sqlpad
