--- a/hello-world-app/backend/package.json
+++ b/hello-world-app/backend/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prod": "node server.js"
+    "prod": "node server.js",
+    "dev": "PORT=3333 node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sap/hana-client": "^2.4.139",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "csv-parser": "^2.3.0",
+    "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "formidable": "^1.2.1"
   }
