--- a/hello-world-app/server.conf
+++ b/hello-world-app/server.conf
@@ -3,8 +3,12 @@ server {
     # document root #
     root        /app/frontend/;
     
-    # Route requsts to /backend/ to Backend npm module
+    # Route requests to /backend/ to Backend npm module
     location /backend/ {
         proxy_pass http://localhost:9999/;
+    }
+     # Route requests to /cds/ to CDS app
+    location /cds/ {
+        proxy_pass http://localhost:4004/;
     }
 }
