--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,6 @@ services:
       context: .
       dockerfile: ./hello-world-app/Dockerfile
     ports:
-      # - "3333:9999" No longer needed we are using Nginx
       # Reroute Nginx listening on Port 80 over to 8080 which we've already exposed in EC2
       - "8080:80"
     environment:
@@ -26,6 +25,7 @@ services:
     image: store/saplabs/hanaexpress:2.00.036.00.20190223.1
     hostname: hxe
     volumes:
+      - $HOME/environment/hanadev/db-scripts:/scripts
       - hana-express:/hana/mounts
     command: --agree-to-sap-license --master-password ${HXE_MASTER_PASSWORD}
     
