--- a/hello-world-app/backend/package.json
+++ b/hello-world-app/backend/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sap/hana-client": "^2.4.139",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
     "express": "^4.17.0"
   }
 }
