--- a/hello-world-app/server.conf
+++ b/hello-world-app/server.conf
@@ -7,8 +7,8 @@ server {
     location /backend/ {
         proxy_pass http://localhost:9999/;
     }
-     # Route requests to /cds/ to CDS app
-    location /cds/ {
-        proxy_pass http://localhost:4004/;
+     # Route requests to /admin/ to Admin npm module
+    location /admin/ {
+        proxy_pass http://localhost:9090/;
     }
 }
