Clean up/optimize

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,13 @@ services:
       - HANA_UID=${HANA_APP_UID}
       - HANA_PWD=${HANA_APP_PWD}
       - HANA_SERVERNODE=${HANA_SERVER}
-
+      - HANA_SYSTEMNODE=${HANA_SYSTEMNODE}
+      - HANA_TENANTNODE=${HANA_TENANTNODE}
+      - HANA_TENANTDBNAME=${HANA_TENANTDBNAME}
+      - HELLO_WORLD_ADMIN_PORT=${HELLO_WORLD_ADMIN_PORT}
+      - HELLO_WORLD_BACKEND_PORT=${HELLO_WORLD_BACKEND_PORT}
+      - HANA_APP_UID=${HANA_APP_UID}
+      - HANA_APP_PWD=${HANA_APP_PWD}
   sqlpad:
     image: sqlpad/sqlpad
     volumes:
