--- a/hello-world-app/server.conf
+++ b/hello-world-app/server.conf
@@ -1,7 +1,7 @@
 server {
     listen      80 default_server;
     # document root #
-    root        /app/frontend/;
+    root        /app/frontend/dist;
     
     # Route requests to /backend/ to Backend npm module
     location /backend/ {
