--- a/hello-world-app/frontend/package.json
+++ b/hello-world-app/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.2",
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
