Setup Wizard work

--- a/hello-world-app/frontend/package.json
+++ b/hello-world-app/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-json-viewer": "^2.1.6",
     "vue-router": "^3.0.3",
     "vuetify": "^1.5.5"
   },
