--- a/hello-world-app/backend/package.json
+++ b/hello-world-app/backend/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
-    "express": "^4.17.0"
+    "express": "^4.17.0",
+    "socket.io": "^2.2.0"
   }
 }
