--- a/hello-world-app/frontend/package.json
+++ b/hello-world-app/frontend/package.json
@@ -11,10 +11,13 @@
     "@fortawesome/fontawesome-free": "^5.8.2",
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "socket.io-client": "^2.2.0",
     "vue": "^2.6.10",
     "vue-json-viewer": "^2.1.6",
     "vue-router": "^3.0.3",
-    "vuetify": "^1.5.5"
+    "vue-socket.io": "^3.0.7",
+    "vuetify": "^1.5.5",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
