--- a/hello-world-app/admin/package.json
+++ b/hello-world-app/admin/package.json
@@ -4,7 +4,8 @@
   "description": "Admin Module to bootstrap HANA Express and Hello World App",
   "main": "index.js",
   "scripts": {
-    "prod": "node server.js"
+    "prod": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,5 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
