--- a/hello-world-app/backend/package.json
+++ b/hello-world-app/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prod": "node server.js"
+    "prod": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,5 +16,8 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "socket.io": "^2.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
